# Cage

./: README.md  pyproject.toml
artifact/: __init__.py  bundle.py  checkpoint.py  graph.py  index.py  inspection.py  kube.py  oci.py
builder/: executor.py  pipeline.py
cage/: __init__.py  __main__.py  cli.py
cmd/: cage.py  winforge.py
compat/: __init__.py  evidence.py  failure_analysis.py
container/: __init__.py  build.sh  docker-compose.yml  manager.py
core/: __init__.py  build_step.py  compatibility.py  manifest.py  media.py  modules.py  powershell_wrapper_assets.py  profiles.py  sources.py
docs/: README.md  architecture.md  container-architecture.md  legacy-installer-debugging-backlog.md  notepadplusplus-chocolatey.md  production-hardening-roadmap.md  reference-study.md  roadmap.md  spec-v0.md  vic-boundary.md
examples/: chocolatey-firefox.cage.yaml  enterprise-app.cage.json  enterprise-app.winforge.json  files-example.cage.yaml  minimal.cage.json  notepad-plus-plus.cage.yaml  notepad-plus-plus.winforge.yaml  powershell-wrapper-pwsh-vnc.cage.yaml  powershell-wrapper-pwsh-vnc.winforge.yaml  vscode-choco-vnc.cage.yaml
recipes/: chocolatey-for-wine-sandbox.winforge.yaml  notepadplusplus.cage.yaml  pwschoco.cage.yaml  test-containerfile.cage.yaml
runtime/: catalog.json  catalog.py  launcher.py  providers.py  runner_cache.py  runner_catalog.py
scripts/: apply-ps51-gac-fix.py  apply-ps51-native-mscoree.py  apply-ps51-precompiled-helper.py  apply-ps51-python-inventory.py  assembly-inventory.cs
tests/: bundle_fixtures.py  test_artifact_index.py  (+44 more)
(+124 files in other folders)
